# ingestion

./: .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  fixlines.py
config/: default.yml
db/clickhouse/: book_deltas.sql  book_deltas_kafka.sql  book_deltas_mv.sql  book_snapshots.sql  book_snapshots_kafka.sql  book_snapshots_mv.sql  bootstrap.sql  quotes.sql  quotes_kafka.sql  quotes_mv.sql  settings_hdd_ingest.sql  storage_policy_hdd.sql  trades.sql  trades_kafka.sql  trades_mv.sql
db/keeper/: keeper.xml
ops/alerting/: rules.yml
ops/grafana/: dashboard_ingest.json  dashboard_seq_gaps.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/grafana/provisioning/datasources/: datasources.yml
ops/loki/: loki.yml  promtail.yml
ops/prometheus/: prometheus.yml
services/bookbuilder/: Cargo.toml
services/bookbuilder/src/: main.rs
services/connector/: Cargo.toml
services/connector/src/: main.rs
services/connector/src/venues/: hyperliquid.rs  mod.rs
services/ingest/: Cargo.toml
services/ingest/src/: main.rs
src/: main.cpp
tools/faults/: README.md
tools/replay/: Cargo.toml
tools/replay/src/: main.rs
tools/simfeed/: simfeed.py
