[package]
name = "connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version="0.7", features=["codec"] }
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["fmt","env-filter"] }
serde = { version="1", features=["derive"] }
serde_json = "1"
governor = "0.6"
rdkafka = { version="0.36", features=["cmake-build"] }
reqwest = { version="0.12", features=["json","rustls-tls"] }
url = "2"
uuid = { version="1", features=["v4"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
